--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,11 +22,6 @@
   </div>
 
   <div class="field">
-    <%= form.label :currency %>
-    <%= form.number_field :currency %>
-  </div>
-
-  <div class="field">
     <%= form.label :start_at %>
     <%= form.datetime_select :start_at %>
   </div>
@@ -36,6 +31,23 @@
     <%= form.datetime_select :end_at %>
   </div>
 
+  <div class="field">
+    <%= form.label :currency %>
+    <select name="product[currency]">
+      <option value="NTD">NTD</option>
+      <option value="USD">USD</option>
+      <option value="HKD">HKD</option>
+    </select>
+  </div>
+
+  <div class="field">
+    <%= form.label :tag_list %>
+    <select name="product[tag_list][]" multiple= 'true'>
+      <option value="tag1">tag1</option>
+      <option value="tag2">tag2</option>
+      <option value="tag3">tag3</option>
+    </select>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
