--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,44 +11,44 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :money %>
-    <%= form.text_field :money %>
+    <%= form.text_field :money, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :start_at %>
     <%= form.datetime_select :start_at %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :end_at %>
-    <%= form.datetime_select :end_at %>
+    <%= form.datetime_select :end_at, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :currency %>
-    <select name="product[currency]">
+    <select name="product[currency]" class= "form-control">
       <option value="NTD">NTD</option>
       <option value="USD">USD</option>
       <option value="HKD">HKD</option>
     </select>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :tag_list %>
-    <select name="product[tag_list][]" multiple= 'true'>
+    <select name="product[tag_list][]" multiple= 'true' class= "form-control">
       <option value="tag1">tag1</option>
       <option value="tag2">tag2</option>
       <option value="tag3">tag3</option>
     </select>
   </div>
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'submit', class: 'btn btn-primary' %>
   </div>
 <% end %>
